--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
             <button id="restart-quiz">Restart quiz</button>
         </div>
     </div>
+
+    <div id="credit"><a href="https://www.instagram.com/preyanshuuu/">Developed by Priyanshu kandari</a></div>
 </body>
 <script src="script.js"></script>
 </html>
